# openclaw-workspace

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONFIG.md  CRITICAL-RULES.md  DEVELOPMENT_STANDARDS.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README-DEPLOYMENT.md  README.md  TOOLS.md  USER.md  __init__.py  docker-compose.yml  export_suppliers.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: backup.sh  deploy.yml
api/: __init__.py  models.py  routes.py  schemas.py
core/: __init__.py  config.py  database.py  logger.py  security.py
memory/: 2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md
scripts/: GITIGNORE-CHECKLIST.md  daily_email_job.py  migrate_data.py  setup_env.py  verify-critical-files.sh
services/: __init__.py  dedupe.py  email_service.py  export.py  scheduler.py  search.py  supplier.py
tests/: test_api.py
